--- a/src/App.css
+++ b/src/App.css
@@ -38,6 +38,24 @@
 }
 
 #img {
-  max-width: 500px;
-  max-height: 500px;
+  max-width: 750px;
+  max-height: 750px;
+}
+
+.App > *, .App > form > input, #img-canvas, #capture-button {
+    margin: 10px;
+}
+
+#capture-image {
+  display: none;
+}
+
+#select-image {
+  width: 200px;
+}
+
+@media (min-width:600px) {
+  #capture-div {
+    display: none;
+  }
 }
