--- a/src/App.css
+++ b/src/App.css
@@ -50,3 +50,30 @@
   font-weight: bold;
   background-color: #FFFF00
 }
+
+#img-sm {
+  max-width: 400px;
+  max-height: 600px;
+}
+
+.canvas, #img-sm {
+  border: 1px solid black;
+}
+
+#threshold-select {
+  display: flex;
+  justify-content: center;
+}
+#threshold-select > button {
+  margin-right: 10px;
+  margin-top: 10px;
+}
+
+.hidden {
+  visibility: hidden;
+}
+
+.hide {
+  height: 0;
+  width: 0;
+}
